Step 1 open api endpoints Open API docs added Tests added Endpoints implemented Service added Deps reviewed