@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'idea'
     id 'application'
+    id 'jvm-test-suite'
     alias(libs.plugins.springBootPlugin)
     alias(libs.plugins.springDepManagementPlugin)
 }
@@ -26,13 +27,14 @@ tasks.withType(JavaCompile).configureEach {
 
 dependencies {
     implementation libs.springBootWeb
-    implementation libs.springBootJdbc
-    implementation libs.postgresql
-    implementation libs.liquibase
+//    implementation libs.springBootJdbc
+//    implementation libs.postgresql
+//    implementation libs.liquibase
     implementation libs.hikariCP
     implementation libs.jacksonDataformat
     implementation libs.mapstructCore
     implementation libs.lombokMapstructBinding
+    implementation libs.openApi
 
     compileOnly libs.lombok
     annotationProcessor libs.lombok
@@ -46,12 +48,47 @@ dependencies {
     testImplementation libs.jupiter
     testImplementation libs.mockitoCore
     testImplementation libs.mockitoJupiter
-    testImplementation libs.springBootTest
 }
 
 test {
     useJUnitPlatform()
 }
+
+
+testing {
+    suites {
+        configureEach {
+            useJUnitJupiter()
+            targets {
+                all {
+                    testTask.configure {
+                        jvmArgs('--enable-preview')
+                        testLogging {
+                            events("passed", "failed")
+                        }
+                    }
+                }
+            }
+        }
+
+        integrationTest(JvmTestSuite) {
+            dependencies {
+                implementation libs.springBootWeb
+                implementation libs.assertjCore
+                implementation libs.springBootTest
+//                implementation libs.springBootJdbc
+
+                compileOnly libs.lombok
+                annotationProcessor libs.lombok
+                annotationProcessor libs.mapstructProcessor
+
+                implementation(project())
+            }
+        }
+    }
+}
+
+
 
 application {
     mainClass = 'by.mrrockka.Application'
